--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-repeat: repeat;
     background-image: url("background_1.png");
@@ -17,19 +22,19 @@ body {
 }
 .container {
     display: flex;
-    justify-content:space-evenly;
-    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    min-height: 100vh;
+
 }
 
-
-
-
 /* Clear floats after the columns */
-.container:after {
+/* .container:after {
     content: "";
     display: table;
     clear: both;
-}
+} */
 
 /* Responsive layout - when the screen is less than 600px wide, 
 make the three columns stack on top of each other instead
@@ -49,69 +54,82 @@ of next to each other */
 }
 
 .box:hover {
-    opacity: 0.7%;
+    opacity: 70%;
 }
 
-.dateBox {
+#dateBox {
     background-color: pink;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
+
 }
 
-.monthBox {
+#monthBox {
     background-color: blue;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.yearBox {
+#yearBox {
     background-color: #ff0000;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
 
-.socialBox {
+#socialBox {
     background-color: #ffa500;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.photoBox {
+#photoBox {
     background-color: #ffff00;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.musicBox {
+#musicBox {
     background-color: #008000;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.videoBox {
+#videoBox {
     background-color: #87ceeb;
     border: 2px solid black; 
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.wordBox {
-    background-color: #4b0082;
+#wordBox {
+    background-color: #7f25c0;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
 }
 
-.filesBox {
+#filesBox {
     background-color: #ee82ee;
     border: 2px solid black;
-    padding: 5px;
+    /* padding: 5px; */
     text-align: center;
+
+}
+
+.box {
+    min-width: 150px;
+    max-width: 300px;
+    padding: 20px 0;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
